valueOf: Replace use of constructors with valueOf